# caos

./: .gitignore  README.md
sem-01/: hello.c  hello_at_t.s
sem-02/: README.md  add_two.S
sem-03/: sm02-3
sem-06/: array.c  input.c  string.c
sem-11/: dot_product.c  helper.txt
sem-14/: decode.py
sem-15/: keyboard.c  no.c
sem-17/: README.md  args.sh  calc.sh  main.cpp  parallel.sh  test.txt
sem-18/: README.md  fork_fd.c  forks.c  just_fork.c
sem-19/: dup.c  exec.c  full.c
sem-20/: alarm.c  sigaction.c
sem-21/: README.md  mmap_file.c
sem-22/dynamic_cmake/: CMakeLists.txt  main.cpp
sem-27/: pipes.c
sem-28/: atomic.cpp  sharing.cpp
sem-29/: README.md  measure_time.c  pass_int.c  spam.c  thread_local.c
sem-30/: README.md  asan_stack.cpp  thread.cpp
sem01/: main.asm  main.asm1
sem02/: aout.txt  dup.cpp  objdump.txt  out.txt  output.txt  read  read.cpp
sem03/: mmap_allocator.c  mmap_write.c  tasks.h
sem04/: file.txt  fork.c  fork_exec.c  fork_exit.c  fork_fd.c  out.txt
sem06/: add_two.S
sem07/: task1.S  task1.c  task3.c  task4.S
sem09/: convertions.c  equal_check.c  float_parts.c
sem1/: main.S  main.asnm  main.cpp  main.i  main.ll  prog
sem10/: atomic.cpp  cv.cpp  mutex.cpp  task  task.cpp  thread.cpp  thread_local.cpp
sem11/: cache.cpp  parallel_transform.cpp  ping_pong.cpp  queue.cpp  rate_limit.cpp  task_debug.cpp  thread_pool.cpp  trololo.h
sem2/: atexit.cpp  ex.cpp  io.cpp  prints.cpp  read.s  seek_truncate.cpp  test.txt
sem3/: mmap_memory.c  mmap_read.c  tasks.c  test.txt
sem4/: README.md  fork_cow.c
sem5/: cheat.c  (+1 more)
(+172 files in other folders)
